[package]
name = "st7789_rs"
description = "A driver and graphics library for st7789 displays, primarily used on a Raspberry Pi"
homepage = "https://github.com/eric-ene/st7789_rs"
repository = "https://github.com/eric-ene/st7789_rs"
readme = "README.md"
version = "0.1.4"
edition = "2021"
license-file = "LICENSE"
include = [
  "**/*.rs",
  "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.2"
image = "0.24.7"
imageproc = "0.23.0"
itertools = "0.12.0"
rppal = { version = "0.16.1", features = ["hal"] }
rusttype = "0.9.3"
spidev = "0.6.0"